--- a/.gitignore
+++ b/.gitignore
@@ -13,16 +13,14 @@
 *.json
 *.npy
 *.log
-dataset/AudioSet-SingleSource/*
 
 #ignore weights
 *.pth
 *.t7
-ResNet/resnet_torch/
 
 #ignore checkpoints
 checkpoints/
-.ipynb_checkpoints/
+*.ipynb_checkpoints*
 
 ## 
 *__pycache__*
@@ -30,10 +28,10 @@ runs/
 seperation/
 
 #ignore nouse files
-exercise.ipynb
-example.py
-nmf.py
-dataset/NMF/audio_import_net.py
+test0.py
+dataset/
+ResNet/
+dataHelper/
 ResNet/resnet-101_keras-Copy1.py
 ResNet/resnet_152_keras.py
 ResNet/resnet-152_keras2.py
